re-enable calling

--- a/config.json.template
+++ b/config.json.template
@@ -2,5 +2,6 @@
 	"twilioSID": "YOUR-APP-SID-HERE",
 	"twilioAuthToken": "YOUR-AUTH-TOKEN-HERE",
 	"URL":"http://example.com",
+	"CallFrom":"+12121231234",
 	"Phones":["+12345678900","+19876543210"]
 }
